docs/apache-airflow-providers-google/6.5.0/_sources/_api/airflow/providers/google/common/links/storage/index.rst.txt
:py:mod:`airflow.providers.google.common.links.storage`
=======================================================

.. py:module:: airflow.providers.google.common.links.storage

.. autoapi-nested-parse::

   This module contains a link for GCS Storage assets.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.common.links.storage.StorageLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.common.links.storage.BASE_LINK
   airflow.providers.google.common.links.storage.GCS_STORAGE_LINK


.. py:data:: BASE_LINK
   :annotation: = https://console.cloud.google.com

   

.. py:data:: GCS_STORAGE_LINK
   

   

.. py:class:: StorageLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing GCS Storage link

   .. py:attribute:: name
      :annotation: = GCS Storage

      

   .. py:attribute:: key
      :annotation: = storage_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance, uri)
      :staticmethod:



